css/default.css
/* ... */
/******************/
/* MODE SELECTORS */
/******************/

.mode-selector button:disabled {
    cursor: default;
}

/**********************************/
/*  Mode selectors in page toolbar.
 */

#page-toolbar .dark-mode-selector {
    order: 1;
}
#page-toolbar .reader-mode-selector {
    order: 2;
}
#page-toolbar .extracts-mode-selector {
    order: 3;
}
#page-toolbar #search-widget {
    order: 4;
}
#page-toolbar #help-widget {
    order: 5;
}

#page-toolbar .mode-selector button .label {
    text-underline-position: from-font;
    text-underline-offset: -1px;
    text-decoration: none;
}
#page-toolbar .mode-selector button.selected .label {
    text-decoration: underline from-font;
}
#page-toolbar .mode-selector button.active .label {
    text-decoration: dotted underline from-font;
}

/*  Vertical layout.
 */
#page-toolbar.vertical .mode-selector {
    padding: 2px 0;
}
#page-toolbar.vertical .mode-selector button + button {
    margin-top: 3px;
}

/*  Mobile layout.
 */
#page-toolbar.mobile .mode-selector {
    padding: 2px 0;
}

/*  Specific mode selectors & buttons.
 */
#page-toolbar.vertical .extracts-mode-selector button.select-mode-on .icon {
    padding: 5px;
}
#page-toolbar.vertical .extracts-mode-selector button.select-mode-off .icon {
    padding: 2px;
}
#page-toolbar.mobile .extracts-mode-selector button.select-mode-on .icon {
    padding: 7px;
}
#page-toolbar.mobile .extracts-mode-selector button.select-mode-off .icon {
    padding: 4px;
}
#page-toolbar.mobile .dark-mode-selector button .icon {
	padding: 6px;
}

/*************************/
/*  Inline mode selectors.
 */

.mode-selector-inline {
    display: inline-flex;
    position: relative;
    padding: 0.25em 0.5em;
    bottom: -0.15em;
}

.mode-selector-inline button .icon {
    width: 1.125em;
    display: flex;
    opacity: 0.4;
}
@media all and (hover: hover) {
    .mode-selector-inline button .icon {
        transition:
            opacity 0.1s ease;
    }
    .mode-selector-inline button:hover .icon {
        opacity: 1.0;
    }
}
.mode-selector-inline button .label {
    font-size: 0.75em;
    margin-left: 0.25em;
    position: relative;
}
.mode-selector-inline button + button {
    margin-left: 0.625em;
}

.mode-selector-inline button:hover .label::after,
.mode-selector-inline button.selected .label::after,
.mode-selector-inline button.active:not(:hover) .label::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
}
.mode-selector-inline button:hover .label::after,
.mode-selector-inline button.selected .label::after {
    border-bottom: 1px solid currentColor;
}
.mode-selector-inline button.active:not(:hover) .label::after {
    border-bottom: 1px dotted currentColor;
}
.mode-selector-inline button:not(:disabled):active .label {
    transform: translateY(2px);
}
.mode-selector-inline button:not(:disabled):active .label::after {
    transform: translateY(-2px);
}


/*****************/
/* LINKS WIDGETS */
/*****************/
/*	(e.g. Search, Help)
 */

#page-toolbar .link-widget a {
    display: block;
}
#page-toolbar .link-widget a .icon {
	width: 100%;
	height: 100%;
	box-sizing: border-box;
	display: flex;
	justify-content: center;
}
#page-toolbar .link-widget a svg {
    display: block;
}


/*****************/
/* SEARCH WIDGET */
/*****************/

#page-toolbar #search-widget a .icon {
	padding: 5px;
}
#page-toolbar.mobile #search-widget a .icon {
	padding: 7px;
}


/***************/
/* HELP WIDGET */
/***************/

#page-toolbar #help-widget a .icon {
	padding: 3px;
}
#page-toolbar.mobile #help-widget a .icon {
	padding: 5px;
}


/******************************/
/* GENERAL ACTIVITY INDICATOR */
/******************************/

#general-activity-indicator {
    position: fixed;
    width: 1em;
    bottom: 0.25em;
    left: 0.25em;
    visibility: hidden;
}

#general-activity-indicator svg {
    display: block;
    width: 100%;
}

#general-activity-indicator.on {
    visibility: visible;
}
#general-activity-indicator.on svg {
    animation: fa-spin 0.75s infinite steps(8);
}

@keyframes fa-spin {
      0% { transform: rotate(0deg);   }
    100% { transform: rotate(360deg); }
}

@media all and (max-width: 649px) {
    display: none;
}


/****************/
/* TRANSCLUSION */
/****************/

a.include-loading:empty,
a.include-loading-failed:empty {
    margin: 0;
}
.markdownBody a.include-loading:empty,
.markdownBody a.include-loading-failed:empty {
    background: none;
}

a.include-loading.include-spinner {
    --spinner-image: url('/static/img/icon/icons.svg#circle-notch-solid');

    pointer-events: none;
}

/*  Loading spinner.
 */
a.include-loading.include-spinner::after {
	--dark-mode-invert-filter: invert(1);

    display: inline-block;
    animation: fa-spin 2s infinite linear;
    position: relative;
    opacity: 0.5;
    top: 0.25em;
}

a.include-loading.include-spinner:empty::after {
    content: "";
    background-image: var(--spinner-image);
    width: 1.25em;
    height: 1.25em;
    margin: 0;
}

a.include-loading.include-spinner:not(:empty)::after,
a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
    background-image: var(--spinner-image);
}
a.include-loading.include-spinner:not(:empty)::after {
    --spinner-size: 0.9em;

    background-size: var(--spinner-size);
    content: "";
    font-size: var(--spinner-size);
    width: var(--spinner-size);
    height: var(--spinner-size);
    margin: 0 0.1em 0 0.2em;
    top: unset;
    bottom: 0;
}
a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
    padding: 0;
    background-position: 0 0;
}
/* ... */

